<?xml version="1.0"?>
<package format="3">
  <name>control_command_split</name>
  <version>0.0.1</version>
  <description>Modular robot controller with MoveIt planning, servo control, and insertion strategy.</description>

  <maintainer email="you@example.com">Kewei Zuo</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>rclcpp_action</depend>
  <depend>std_msgs</depend>
  <depend>std_srvs</depend>
  <depend>sensor_msgs</depend>
  <depend>geometry_msgs</depend>

  <depend>tf2</depend>
  <depend>tf2_ros</depend>
  <depend>tf2_geometry_msgs</depend>

  <depend>moveit_ros_planning_interface</depend>
  <depend>moveit_msgs</depend>
  <depend>moveit_core</depend>

  <build_depend>eigen3_cmake_module</build_depend>
  <depend>eigen</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
