<?xml version="1.0"?>
<package format="3">
  <name>carryover_validation</name>
  <version>0.1.0</version>
  <description>
    ROS 2 package for validating the carry-over model and online RLS estimation of beta_perp.
  </description>

  <maintainer email="zuo-kewei@g.ecc.u-tokyo.ac.jp">Kewei Zuo</maintainer>
  <license>MIT</license>

  <!-- Build system -->
  <buildtool_depend>ament_python</buildtool_depend>

  <!-- Runtime dependencies -->
  <depend>rclpy</depend>
  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>builtin_interfaces</depend>

  <!-- Python dependencies -->
  <exec_depend>python3-numpy</exec_depend>

  <!-- Optional, only needed if offline_analyzer.py uses pandas/matplotlib -->
  <!--
  <exec_depend>python3-pandas</exec_depend>
  <exec_depend>python3-matplotlib</exec_depend>
  -->

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
